# clang-test

./: .gitignore  Makefile  a.cpp
metrics/: CMakeLists.txt  Clang.cpp  Clang.hpp  Location.cpp  Location.hpp  Makefile  Metric_IT.cpp  Metric_IT.hpp  Range.cpp  Range.hpp  Visitor.cpp  Visitor.hpp  VisitorDescriptor.hpp  VisitorFactory.cpp  VisitorFactory.hpp  XmlWriter.cpp  XmlWriter.hpp  clast.cpp  clast.hpp  dependency.cpp  dependency.hpp  graph.cpp  graphviz.cpp  graphviz.hpp  kohesion.cpp  kohesion.hpp  metrics.cpp  string_join.hpp  string_split.hpp  utils.cpp  utils.hpp
test/: a.cpp  a.h  b.cpp  b.h
